# genshin-character-translator

./: .names.txt.kate-swp  Cargo.toml  README.md  Secrets.toml  names.txt
src/: character.rs  event_handler.rs  extensions.rs  lib.rs
