[package]
name = "genshin-char-translator"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
anyhow = "1.0.68"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
# tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
shuttle-secrets = "0.10.0"
tracing = "0.1.37"
